syntax = "proto3";

package buoyantio.bb;

option go_package = "github.com/buoyantio/bb/gen";

message TheRequest {
    string requestUID = 1;
}

message TheResponse {
    string requestUID = 1;
    string payload = 2;
}

service TheService {
    rpc theFunction (TheRequest) returns (TheResponse) {
    }
}
